--- a/style.css
+++ b/style.css
@@ -1,86 +1,16 @@
-@media (max-width: 480px) {
-
-body {
-  padding: 0 10px;
+.fa-fw {
+  margin-right: 3px;
 }
 
-body #container ul.posts .datetime {
-  float: none;
-  display: block;
-  width: auto;
-  text-align: left;
-}
-
-body #container #ind-instagram, body #container #ind-linkedin {
-  display: none;
-}
-
-body #container .links, body #container .content {
-  padding: 15px;
-}
-
-body #container .links section.post, body #container .content section.post {
-  margin: 0 -15px;
-}
-
-body #container .links section.post > p, body #container .links section.post h1, body #container .links section.post h2, body #container .links section.post h3, body #container .links section.post h4, body #container .links section.post .signoff, body #container .links section.post blockquote, body #container .links section.post .highlight, body #container .content section.post > p, body #container .content section.post h1, body #container .content section.post h2, body #container .content section.post h3, body #container .content section.post h4, body #container .content section.post .signoff, body #container .content section.post blockquote, body #container .content section.post .highlight {
-  padding: 0 15px;
-}
-
-body #container .links section.post > ul, body #container .links section.post > ol, body #container .content section.post > ul, body #container .content section.post > ol {
-  padding: 0 30px;
-}
-
+.ui.dimmer {
+  background: rgba(255, 255, 255, 0.85) !important;
 }
 
 
-.image {
-  float: left;
-  padding-top: 10px !important;
-  padding-right: 10px !important;
+header {
+  margin-top: 30px !important;
 }
 
-.image img {
-  max-width: 100px !important;
-}
-
-.info {
-  width: 60%;
-  float: left;
-  padding: 0 !important;
-  margin-bottom: 30px;
-}
-
-
-
-h1, h2, h3, h4, h5, strong, b {
-  font-weight: 600; }
-
-html, body {
-  height: 100%;
-}
-
-.hoge {
-  font-weight: bold;
-//  font-size: 1.2em;
-}
-
-.video-container {
-  position: relative;
-  padding-bottom: 43% !important;
-  padding-top: 30px !important;
-  height: 0;
-  overflow: hidden;
-  margin: 0 60px;
-}
-
-.video-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
 
 body {
   background: #f9f9f9;
@@ -153,8 +83,6 @@ blockquote {
   margin: 0;
   font-style: normal !important; }
 
-header {
-  text-align: center; }
 
 footer {
   width: 100%;
@@ -172,9 +100,9 @@ footer {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  max-width: 700px;
+  /*max-width: 700px;*/
   background: #fff;
-  margin: 40px auto 20px;
+  /*margin: 40px auto 20px;*/
   border-radius: 7px;
   border: 1px solid #eee;
   position: relative; }
@@ -213,7 +141,7 @@ footer {
       height: 20px;
       overflow: hidden; }
 
-.content {
+/*.content {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -222,7 +150,7 @@ footer {
   border-width: 0;
   border-style: solid;
   padding: 30px 60px;
-  margin: auto; }
+  margin: auto; }*/
 
 a, .as-link {
   text-decoration: none;
