--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   margin-right: 3px;
 }
 
+.ui.segment {
+  font-size: 1.3rem !important;
+}
+
 .ui.dimmer {
   background: rgba(255, 255, 255, 0.85) !important;
 }
