--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,37 @@
-#profile-image {
-  max-width: 62px;
-  float: left;
-  margin-right: 15px
-}
 
 #top-video {
   width: 100%;
   margin: 10px 0;
+}
+
+#breadcrumb {
+  padding: 0;
+  margin-bottom: 20px;
+  font-size: 1.1em;
+  background: none;
+}
+
+#project .content {
+  /*text-align: center;*/
+}
+
+.images img {
+  height: 200px;
+
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #video-bg {
