--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,21 @@
   /*text-align: center;*/
 }
 
+#project video {
+  width: 100%;
+}
+
+#project .figures {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+
+
+#project p {
+  text-align: justify;
+}
+
 .images img {
   height: 200px;
 
