--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,18 @@
+#lab {
+  margin:  30px 0;
+  text-align: center;
+  color: black;
+}
+
+#lab img {
+  width: 90%;
+}
+
+#lab:hover {
+  opacity: 0.7;
+}
+
+
 header {
   margin-top: 30px !important;
 }
