--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,15 @@
+.cover-image-container {
+  width: 100%;
+  height: 200px;
+}
+
+.cover-image {
+  background-position: 50%;
+  background-size: cover;
+  height: 100%!important;
+  object-fit: cover!important;
+}
+
 #lab {
   margin:  30px 0;
   text-align: center;
