--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,16 +10,17 @@
   object-fit: cover!important;
 }
 
-#lab {
-  margin:  30px 0;
+.teaser {
+/*  margin-bottom: 20px;*/
   text-align: center;
   color: black;
+  padding: 15px 0px !important;
 }
 
-#lab img {
+/*.teaser img {
   width: 90%;
 }
-
+*/
 #lab:hover {
   opacity: 0.7;
 }
@@ -176,12 +177,48 @@ a:hover {
 }
 
 
-#container {
+.container {
   width: 100%;
   background: #fff;
   padding: 20px;
   border-radius: 7px;
   border: 1px solid #eee;
   position: relative;
+  margin-bottom: 20px;
 }
 
+body .ui.cards>.card{
+  box-shadow: none;
+}
+
+#students {
+  font-size: 0.8em !important;
+}
+
+#students .header {
+  margin: 5px 0px;
+}
+
+#students .title {
+  position: absolute;
+  z-index: 1000;
+  top: -8px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+
+}
+
+.profile-container {
+  width: 100%;
+  height: 120px;
+  overflow: hidden;
+}
+
+.profile {
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover;
+}
